# Esame-Sistemi-2

./: .gitignore  Analisi.py  Estrattore.py  Operazioni_preliminary.py  README.md  Script.R  Tools.py  app.py  credenziali.py  credenziali.txt  dati.time.series  hello.py  prove  prove.py  pyproject.toml
ESEMPIO DI DOWNLOAD/: Good Charlotte - The Anthem (Official Video).webm  Green Day - American Idiot [Official Music Video] [4K Upgrade].webm  Green Day - Basket Case [Official Music Video] (4K Upgrade).webm  Green Day - When I Come Around [Official Music Video] (4K Upgrade).webm  My Chemical Romance - Na Na Na [Official Music Video].webm  My Chemical Romance - Teenagers [Official Music Video] [4K].webm  Nickelback - How You Remind Me [OFFICIAL VIDEO].webm  Nirvana - Come As You Are (Official Music Video).webm  Simple Plan - I'm Just A Kid (Official Video) [HD].webm  Simple Plan - Welcome To My Life (Official Video).webm  Sum 41 - Fatlip (Official Music Video).webm  Sum 41 - In Too Deep (Official Music Video).webm  Sum 41 - Never There (Official Music Video).webm  Sum 41 - Still Waiting (Official Music Video).webm  Sum 41 - The Hell Song (Official Music Video).webm  The Offspring - The Kids Aren't Alright (Official Music Video).webm  The Offspring - Want You Bad (Official Music Video).webm  The Offspring - You're Gonna Go Far, Kid (Official Music Video).webm  The Rolling Stones - Paint It, Black (Official Lyric Video).webm  blink-182 - All The Small Things (Official Music Video).webm  blink-182 - First Date (Official Video).webm  sum 41 - landmines (lyrics).webm  (+1 more)
(+45 files in other folders)
