[project]
name = "esame-sistemi-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.4.1",
    "polars>=1.14.0",
    "streamlit-option-menu>=0.4.0",
    "streamlit>=1.40.1",
    "datetime>=5.5",
    "icecream>=2.1.3",
    "beautifulsoup4>=4.12.3",
    "requests>=2.32.3",
    "plotly-express>=0.4.1",
    "pygame>=2.6.1",
    "matplotlib>=3.9.3",
    "spotipy>=2.24.0",
    "vega-datasets>=0.9.0",
    "wikipedia>=1.4.0",
    "pytube>=15.0.0",
    "youtube-search-python>=1.6.6",
    "pydub>=0.25.1",
    "yt-dlp>=2024.12.23",
]
